--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="button-1">Click Me!</button>
+    <button onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" type="button" class="button-2">No, Click Me!</button>
   </body>
 </html>
